# rust-vs-scala-hackday

./: README.md
rust-service/: Cargo.toml  Dockerfile  Dockerfile-non-alpine
rust-service/scripts/: go.sh
rust-service/src/: config.rs  main.rs
rust-service/src/api/: mod.rs  produce_event_route.rs  router.rs
rust-service/src/api/model/: event.rs  fire_event_request.rs  mod.rs
scala-service/: .gitignore  .sbtopts  .scalafmt.conf  build.sbt  docker-compose.yaml
scala-service/project/: Common.scala  DockerSettings.scala  plugins.sbt
scala-service/scripts/: restartWithFreshVolume.sh
scala-service/src/main/resources/: application.conf  logback.xml
scala-service/src/main/scala/service/: Main.scala
scala-service/src/main/scala/service/api/: HttpRouter.scala  ProduceEventRoute.scala
scala-service/src/main/scala/service/api/model/: Event.scala  FireEventRequest.scala
