[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = { version = "0.9.0", default-features = false}
log = "0.4.19"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
warp = "0.3.5"
